Einleitung zur ersten Aufgabe ergänzt

--- a/EA1/EA1_final.ipynb
+++ b/EA1/EA1_final.ipynb
@@ -68,6 +68,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53b8e941",
+   "metadata": {},
+   "source": [
+    "## Addition von Zahlen im Array: Unterschiedliche Berechnungsmethoden\n",
+    "\n",
+    "In dieser Aufgabe geht es um die Addition von Zahlen, die in einem Array gespeichert sind. Das Array besteht aus 101 Einträgen, wobei der erste Eintrag die Zahl 1 enthält und die restlichen 100 Einträge jeweils den Wert $ 1 \\times 10^{-16} $ haben. Die Aufgabe besteht darin, die Summe der Werte in diesem Array auf verschiedene Arten zu berechnen: einmal mit der `np.sum()`-Funktion und zweimal unter Verwendung von Schleifen, die das Array jeweils von vorne nach hinten bzw. von hinten nach vorne durchlaufen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "11b6c189-e0ee-411a-8f83-b804db3527d8",
