Zusammenfassung bzw. Verbesserung von Texten bei der zweiten Aufgabe "Grenzwerte von Funktionen"

--- a/EA1/EA1_Aufgabe_1_Und_2_Ahmed.ipynb
+++ b/EA1/EA1_Aufgabe_1_Und_2_Ahmed.ipynb
@@ -609,20 +609,9 @@
     "\n",
     "- Eine `float32`-Mantisse besteht aus 23 Bit und eine `float64`-Mantisse aus 52 Bit (bei 64 Bit bleiben noch 11 Bit für den Exponenten und 1 Bit für das Vorzeichen).\n",
     "\n",
-    "Werden Werte, die mehr Bits zur Darstellung benötigen als die Mantisse zur Verfügung stellt, kommt es zu Rundungsfehlern, wie in den folgenden Beispielen erklärt.\n",
+    "Bei Werten, die mehr Bits zur Darstellung benötigen als die Mantisse zur Verfügung stellt, kommt es zu Rundungsfehlern, wie in den folgenden Beispielen erklärt:\n",
     "\n",
-    "## Fazit zur Gleitkommadarstellung und Rundungsfehlern\n",
-    "\n",
-    "Die Präzision von Gleitkommazahlen ist durch die Anzahl der Bits in der Mantisse begrenzt, was zu Rundungsfehlern führt, wenn Zahlen mit mehr erforderlichen Bits dargestellt werden müssen. Besonders bei sehr kleinen Werten kann dies zu Verlusten an Genauigkeit führen, die sich durch den Einsatz stabiler Berechnungsmethoden wie z. B. `np.expm1(x)` verhindern lassen."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4601e17a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "```python\n",
     "\n",
     "def mindest_mantissenbits(x, y):\n",
     "    # Berechnet die Anzahl der benötigten Mantissenbits für eine korrekte Berechnung\n",
@@ -655,7 +644,12 @@
     "# Beispiel 1 + 1e-16 * 100, vorkommend bei Summierung in Schleife von hinten\n",
     "d = np.float128(1e-16 * 100)\n",
     "x + d, np.float64(x + d), \"darstellbar?:\", mindest_mantissenbits(x, d) < 52 + 1\n",
-    "# Ergebnis: (1.00000000000001, 1.00000000000001, 'darstellbar?:', True)"
+    "# Ergebnis: (1.00000000000001, 1.00000000000001, 'darstellbar?:', True)\n",
+    "\n",
+    "```\n",
+    "## Fazit zur Gleitkommadarstellung und Rundungsfehlern\n",
+    "\n",
+    "Die Präzision von Gleitkommazahlen ist durch die Anzahl der Bits in der Mantisse begrenzt, was zu Rundungsfehlern führt, wenn Zahlen mit mehr erforderlichen Bits dargestellt werden müssen. Besonders bei sehr kleinen Werten kann dies zu Verlusten an Genauigkeit führen, die sich durch den Einsatz stabiler Berechnungsmethoden wie z. B. `np.expm1(x)` verhindern lassen."
    ]
   }
  ],
