Berechnung der Bewegung des Pendels

--- a/EA2.ipynb
+++ b/EA2.ipynb
@@ -463,16 +463,47 @@
    },
    "outputs": [],
    "source": [
-    "# Anfangsbedingungen\n",
-    "L = 1\n",
-    "m = 1\n",
-    "b = 0.5\n",
-    "g = 9.81\n",
-    "steps = 20000\n",
-    "# ...\n",
-    "import numba as nb\n",
+    "import numpy as np\n",
+    "from scipy.integrate import solve_ivp\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "..."
+    "# Parameter\n",
+    "L = 1       # Pendellänge in Metern\n",
+    "m = 1       # Masse in kg\n",
+    "b = 0.5     # Dämpfung\n",
+    "g = 9.81    # Erdbeschleunigung\n",
+    "steps = 20000\n",
+    "t_max = 15\n",
+    "theta0 = np.pi / 3   # Anfangswinkel\n",
+    "omega0 = 0           # Anfangsgeschwindigkeit\n",
+    "\n",
+    "# Zeitbereich\n",
+    "t_eval = np.linspace(0, t_max, steps)\n",
+    "\n",
+    "# Definition des Differentialgleichungssystems\n",
+    "def pendel(t, y):\n",
+    "    theta, omega = y\n",
+    "        dtheta_dt = omega\n",
+    "            domega_dt = -(b / m) * omega - (g / L) * np.sin(theta)\n",
+    "                return [dtheta_dt, domega_dt]\n",
+    "\n",
+    "                # Lösung berechnen\n",
+    "                sol = solve_ivp(pendel, [0, t_max], [theta0, omega0], t_eval=t_eval, method='RK45')\n",
+    "\n",
+    "                # Positionen berechnen\n",
+    "                theta = sol.y[0]\n",
+    "                x = L * np.sin(theta)\n",
+    "                y = -L * np.cos(theta)\n",
+    "\n",
+    "                # Plotten (optional)\n",
+    "                plt.plot(x, y)\n",
+    "                plt.xlabel('x')\n",
+    "                plt.ylabel('y')\n",
+    "                plt.title('Bewegung des Pendels')\n",
+    "                plt.axis('equal')\n",
+    "                plt.grid()\n",
+    "                plt.show()\n",
+    "                "
    ]
   },
   {
