Einleitung zur Lösung ergänz

--- a/EA2.ipynb
+++ b/EA2.ipynb
@@ -444,7 +444,68 @@
     "\n",
     "**Aufgabe:** Berechnen Sie die Bewegung des Pendels für $t=[0,...,15]$ für 20000 Zeitschritte. Verwenden Sie die SciPy funktion `integrate.solve_ivp`.\n",
     "\n",
-    "_Points:_ 10"
+    "_Points:_ 10\n",
+    "\n",
+    "## Einleitung zur Lösung der Aufgabe: Einfaches Pendel mit Dämpfung\n",
+    "\n",
+    "In dieser Aufgabe wird die Bewegung eines **gedämpften einfachen Pendels** simuliert. Das Pendel wird durch die folgende **Differentialgleichung zweiter Ordnung** beschrieben:\n",
+    "\n",
+    "$\\theta''(t) + \\frac{b}{m} \\theta'(t) + \\frac{g}{L} \\sin(\\theta(t)) = 0$\n",
+    "\n",
+    "Dabei bedeuten:\n",
+    "\n",
+    "- $\\theta(t)$: Winkel des Pendels zur Vertikalen in Radiant  \n",
+    "- $\\theta'(t)$: Winkelgeschwindigkeit  \n",
+    "- $\\theta''(t)$: Winkelbeschleunigung  \n",
+    "- $b$: Dämpfungskoeffizient (z. B. durch Luftwiderstand)  \n",
+    "- $m$: Masse des Pendelkörpers  \n",
+    "- $g$: Erdbeschleunigung  \n",
+    "- $L$: Länge des Pendels  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Ziel der Aufgabe\n",
+    "\n",
+    "Wir möchten die Bewegung des Pendels im Zeitbereich $t = 0$ bis $t = 15$ Sekunden simulieren – und zwar mit **20.000 Zeitschritten** für eine möglichst feine zeitliche Auflösung. Dafür verwenden wir die numerische Methode `solve_ivp` aus `scipy.integrate`, welche ein **System von Differentialgleichungen erster Ordnung** löst.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Umformulierung in ein System erster Ordnung\n",
+    "\n",
+    "Da `solve_ivp` nur Gleichungen erster Ordnung lösen kann, muss die Gleichung zweiter Ordnung umgeschrieben werden. Dazu setzen wir:\n",
+    "\n",
+    "- $y_0 = \\theta(t)$: Winkel  \n",
+    "- $y_1 = \\theta'(t)$: Winkelgeschwindigkeit  \n",
+    "\n",
+    "Damit ergibt sich das folgende System:\n",
+    "\n",
+    "$y_0' = y_1$  \n",
+    "$y_1' = -\\frac{b}{m} y_1 - \\frac{g}{L} \\sin(y_0)$\n",
+    "\n",
+    "Dieses System beschreibt die zeitliche Entwicklung des Pendels vollständig und ist bereit zur numerischen Lösung.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Weiter Erläuterunge\n",
+    "\n",
+    "1. **Parameterdefinition:** Die physikalischen Konstanten wie Pendellänge $L$, Masse $m$, Dämpfungskoeffizient $b$ und Erdbeschleunigung $g$ werden gesetzt.\n",
+    "\n",
+    "2. **Zeitvektor:** Mit `np.linspace(0, 15, 20000)` wird ein Array von Zeitpunkten erzeugt, an denen das System berechnet wird.\n",
+    "\n",
+    "3. **Modellierung des Systems:** Die Funktion `pendel(t, y)` bildet das oben beschriebene Gleichungssystem ab. Sie gibt die Ableitungen von Winkel und Winkelgeschwindigkeit zurück.\n",
+    "\n",
+    "4. **Numerische Lösung:** `solve_ivp` berechnet aus den Anfangswerten (Startwinkel $\\theta = \\frac{\\pi}{3}$, Anfangsgeschwindigkeit $= 0$) die Entwicklung des Systems über die Zeit mithilfe eines Runge-Kutta-Verfahrens (`RK45`).\n",
+    "\n",
+    "5. **Berechnung der Position:** Aus dem berechneten Winkel $\\theta(t)$ werden mit Hilfe der bekannten Formeln für Kreisbewegung die kartesischen Koordinaten des Pendelkörpers berechnet:\n",
+    "\n",
+    "$x(t) = L \\cdot \\sin(\\theta(t))$  \n",
+    "$y(t) = -L \\cdot \\cos(\\theta(t))$\n",
+    "\n",
+    "6. **Visualisierung:** Die Pendelbewegung wird in einem x-y-Diagramm dargestellt, wodurch die oszillierende und gedämpfte Bewegung deutlich sichtbar wird.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Dieser strukturierte Ansatz erlaubt eine anschauliche und realitätsnahe Simulation eines gedämpften Pendels – unter Berücksichtigung von Reibungsverlusten, wie sie z. B. durch Luftwiderstand entstehen.\n"
    ]
   },
   {
