--- a/EA2.ipynb
+++ b/EA2.ipynb
@@ -446,7 +446,7 @@
     "\n",
     "_Points:_ 10\n",
     "\n",
-    "## Einleitung zur Lösung der Aufgabe: Einfaches Pendel mit Dämpfung\n",
+    "## Einfaches Pendel mit Dämpfung\n",
     "\n",
     "In dieser Aufgabe wird die Bewegung eines **gedämpften einfachen Pendels** simuliert. Das Pendel wird durch die folgende **Differentialgleichung zweiter Ordnung** beschrieben:\n",
     "\n",
@@ -486,7 +486,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Weiter Erläuterunge\n",
+    "### Weitere Erläuterungen\n",
     "\n",
     "1. **Parameterdefinition:** Die physikalischen Konstanten wie Pendellänge $L$, Masse $m$, Dämpfungskoeffizient $b$ und Erdbeschleunigung $g$ werden gesetzt.\n",
     "\n",
