Update für die Simulation von einem Ball

--- a/EA2.ipynb
+++ b/EA2.ipynb
@@ -65,11 +65,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
      "grade_id": "cell-e057f915b262f353",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def timestep(c, v, dt, g, xmax, ymax, damping):\n",
+    "    \"\"\"\n",
+    "    Berechnet einen Zeitschritt für den Ball unter Einfluss von Gravitation,\n",
+    "    inklusive Kollisionserkennung mit Wänden und Energieverlust.\n",
+    "\n",
+    "    Parameter:\n",
+    "    - c: aktuelle Position \n",
+    "    - v: aktuelle Geschwindigkeit\n",
+    "    - dt: Zeitintervall\n",
+    "    - g: Gravitationsvektor\n",
+    "    - xmax, ymax: Begrenzung des Simulationsraums\n",
+    "    - damping: Dämpfungsfaktor bei Kollisionen\n",
+    "\n",
+    "    Rückgabewerte:\n",
+    "    - Neue Positionen und Geschwindigkeiten nach einem Zeitschritt\n",
+    "    \"\"\"\n",
+    "    # Bewegungsgleichung unter Berücksichtigung der Gravitation\n",
+    "    v = v + dt * g\n",
+    "    c_new = c + dt * v\n",
+    "\n",
+    "    # Kollision mit linken/rechten Wänden\n",
+    "    if c_new[0] < 0:  # Wenn der Ball die linke Wand trifft\n",
+    "        dt2 = abs(c_new[0]) / abs(v[0])\n",
+    "        v[0] *= -1 * damping\n",
+    "        c_new[0] = dt2 * v[0]\n",
+    "    elif c_new[0] > xmax:  # Wenn der Ball die rechte Wand trifft\n",
+    "        dt2 = (c_new[0] - xmax) / abs(v[0])\n",
+    "        v[0] *= -1 * damping\n",
+    "        c_new[0] = xmax - dt2 * v[0]\n",
+    "\n",
+    "    # Kollision mit oberer/unterer Wand\n",
+    "    if c_new[1] < 0:  # Wenn der Ball den Boden trifft\n",
+    "        dt2 = abs(c_new[1]) / abs(v[1])\n",
+    "        v[1] *= -1 * damping\n",
+    "        c_new[1] = dt2 * v[1]\n",
+    "    elif c_new[1] > ymax:  # Wenn der Ball die obere Wand trifft\n",
+    "        dt2 = (c_new[1] - ymax) / abs(v[1])\n",
+    "        v[1] *= -1 * damping\n",
+    "        c_new[1] = ymax - dt2 * v[1]\n",
+    "\n",
+    "    return c_new, v\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
+    "<!-- BEGIN QUESTION -->\n",
+    "\n",
+    "**Aufgabe:** Animieren Sie die Bewegung des Balls. Der Ball sollte mit der Zeit an Höhe verlieren (durch die Schwerkraft).\n",
+    "\n",
+    "Hinweis: Simulation und Visualisierung müssen getrennt sein (für die nächste Aufgabe).\n",
+    "\n",
+    "_Points:_ 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-c4d15f92b42ff671",
      "locked": false,
      "schema_version": 3,
      "solution": true,
@@ -267,68 +344,6 @@
     "        steps, dt, g, xmax, ymax, damping_factor, visualize\n",
     "    )\n",
     "    print(\"Simulation (ohne Visualisierung) war erfolgreich\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
-   "source": [
-    "<!-- END QUESTION -->\n",
-    "\n",
-    "<!-- BEGIN QUESTION -->\n",
-    "\n",
-    "**Aufgabe:** Animieren Sie die Bewegung des Balls. Der Ball sollte mit der Zeit an Höhe verlieren (durch die Schwerkraft).\n",
-    "\n",
-    "Hinweis: Simulation und Visualisierung müssen getrennt sein (für die nächste Aufgabe).\n",
-    "\n",
-    "_Points:_ 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-c4d15f92b42ff671",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ellipsis"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Anfangsbedingungen (Vorschlag)\n",
-    "dt = 0.1\n",
-    "g = np.array([0, -9.81], dtype=np.float64)\n",
-    "xmax = 100\n",
-    "ymax = 100\n",
-    "steps = 100\n",
-    "# Startposition: x=500, y=500.\n",
-    "# ...\n",
-    "# Startgeschwindigkeit: v_x=20, v_y=0\n",
-    "# ...\n",
-    "\n",
-    "\n",
-    "..."
    ]
   },
   {
