Ausnahmesweise direkte Änderungen in main, da Probleme bei den Commits aufgetreten

--- a/EA2.ipynb
+++ b/EA2.ipynb
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1890,65 +1890,104 @@
     }
    ],
    "source": [
+    "# --- Bibliotheken laden --- \n",
+    "import numpy as np                      # Für numerische Berechnungen\n",
+    "import pandas as pd                     # Für Datenstrukturierung und Tabellen\n",
+    "from IPython.display import Image, display  # Um Bilder direkt in Jupyter-Notebooks anzuzeigen\n",
+    "import holoviews as hv                  # Für interaktive/animierte Visualisierungen\n",
+    "import hvplot.pandas                    # Ermöglicht direktes Plotten von Pandas-DataFrames mit HoloViews\n",
+    "import matplotlib.pyplot as plt         # Für manuelle Zeichnung und Konvertierung von Plots in Bilder\n",
+    "import imageio.v2 as imageio            # Für das Erstellen von GIF-Animationen aus Einzelbildern\n",
+    "from scipy.integrate import solve_ivp   # Für numerische Lösung von Differentialgleichungen\n",
     "\n",
-    "import numpy as np\n",
-    "import holoviews as hv\n",
-    "hv.extension('bokeh')  # Aktiviert das Bokeh-Backend\n",
+    "# HoloViews mit Matplotlib-Backend aktivieren\n",
+    "hv.extension('matplotlib')\n",
     "\n",
-    "from scipy.integrate import solve_ivp\n",
+    "# --- Physikalische Parameter des Pendels ---\n",
+    "g = 9.81                 # Erdbeschleunigung in m/s²\n",
+    "L = 1.0                  # Länge des Pendels in Metern\n",
+    "theta0 = np.pi / 4       # Anfangsauslenkung in Radiant (π/4 = 45°)\n",
+    "omega0 = 0.0             # Anfangsgeschwindigkeit (ruhend)\n",
+    "t_max = 10               # Gesamtdauer der Simulation in Sekunden\n",
+    "dt = 0.05                # Zeitschritt für Ausgabe / GIF-Bildrate\n",
     "\n",
-    "# --- Parameter ---\n",
-    "L = 1                   # Pendellänge [m]\n",
-    "m = 1                   # Masse [kg]\n",
-    "b = 0.5                 # Dämpfung [Ns·m/rad]\n",
-    "g = 9.81                # Erdbeschleunigung [m/s²]\n",
-    "steps = 20000           # Anzahl der Zeitschritte\n",
-    "t_max = 15              # Gesamtdauer der Simulation [s]\n",
-    "theta0 = np.pi / 3      # Anfangsauslenkung [rad]\n",
-    "omega0 = 0              # Anfangsgeschwindigkeit [rad/s]\n",
-    "\n",
-    "# --- Differentialgleichung ---\n",
-    "def pendel(t, y):\n",
+    "# --- Differentialgleichung für das Pendel ---\n",
+    "def pendel_ode(t, y):\n",
+    "    \"\"\"\n",
+    "    t   : Zeit (nicht benutzt, da die Gleichung zeitinvariant ist)\n",
+    "    y   : Zustandsvektor [theta, omega]\n",
+    "    Rückgabe: Zeitableitung [dtheta/dt, domega/dt]\n",
+    "    \"\"\"\n",
     "    theta, omega = y\n",
     "    dtheta_dt = omega\n",
-    "    domega_dt = -(b / m) * omega - (g / L) * theta\n",
+    "    domega_dt = - (g / L) * np.sin(theta)  # Nichtlineare Gleichung (ohne Kleinwinkelnäherung)\n",
     "    return [dtheta_dt, domega_dt]\n",
     "\n",
-    "# --- Simulation mit RK45 ---\n",
-    "t_eval = np.linspace(0, t_max, steps)\n",
-    "sol = solve_ivp(pendel, (0, t_max), [theta0, omega0], method='RK45', t_eval=t_eval)\n",
+    "# --- Zeitpunkte für die Auswertung ---\n",
+    "t_eval = np.arange(0, t_max, dt)\n",
     "\n",
-    "# --- Umrechnung in kartesische Koordinaten ---\n",
-    "theta = sol.y[0]\n",
-    "x = L * np.sin(theta)\n",
-    "y = -L * np.cos(theta)\n",
+    "# --- Numerische Lösung mit solve_ivp und RK23 (Runge-Kutta 2(3)) ---\n",
+    "sol = solve_ivp(\n",
+    "    pendel_ode,              # Differentialgleichung\n",
+    "    [0, t_max],                # Zeitintervall\n",
+    "    [theta0, omega0],          # Anfangsbedingungen\n",
+    "    method='RK23',             # Integrationsmethode\n",
+    "    t_eval=t_eval              # Auswerte-Zeitpunkte\n",
+    ")\n",
     "\n",
-    "# --- Nur jeden 100. Schritt verwenden ---\n",
-    "x_anim = x[::100]\n",
-    "y_anim = y[::100]\n",
+    "# --- Lösung extrahieren ---\n",
+    "theta = sol.y[0]               # Winkelverlauf\n",
+    "omega = sol.y[1]               # Winkelgeschwindigkeit\n",
+    "t = sol.t                      # Zeitpunkte\n",
+    "x = L * np.sin(theta)          # x-Position der Masse (kartesisch)\n",
+    "y = -L * np.cos(theta)         # y-Position der Masse (kartesisch)\n",
     "\n",
-    "# --- Optional: zweite Hälfte der Daten verwerfen ---\n",
-    "half_len = len(x_anim) // 2\n",
-    "x_anim = x_anim[:half_len]\n",
-    "y_anim = y_anim[:half_len]\n",
+    "# --- Daten in einem Pandas-DataFrame zusammenfassen ---\n",
+    "df = pd.DataFrame({\n",
+    "    't': t,\n",
+    "    'theta': theta,\n",
+    "    'omega': omega,\n",
+    "    'x': x,\n",
+    "    'y': y\n",
+    "})\n",
     "\n",
-    "# --- Animation vorbereiten ---\n",
-    "def create_frame(i):\n",
-    "    # Erzeuge eine Linie vom Ursprung (0, 0) zur aktuellen Position (x, y)\n",
-    "    return hv.Path([[(0, 0), (x_anim[i], y_anim[i])]])\n",
+    "# --- Vorbereitung für die Animation ---\n",
+    "x_anim, y_anim = df['x'].values, df['y'].values\n",
     "\n",
-    "# --- Dynamische Karte für die Animation ---\n",
-    "dmap = hv.DynamicMap(create_frame, kdims='Frame')\n",
+    "def pendel_frame(i):\n",
+    "    \"\"\"\n",
+    "    Erzeugt ein HoloViews-Objekt für den i-ten Zeitschritt:\n",
+    "    - Linie vom Ursprung zur Masse\n",
+    "    - Masse als roter Punkt\n",
+    "    - Spur (Pfad) der bisherigen Bewegung\n",
+    "    \"\"\"\n",
+    "    line = hv.Curve(([0, x_anim[i]], [0, y_anim[i]]))  # Pendelstange\n",
+    "    mass = hv.Points(\n",
+    "        ([x_anim[i]], [y_anim[i]], [10]),\n",
+    "        kdims=['x', 'y'], vdims=['size']\n",
+    "    ).opts(color='red', marker='o')                    # Masse (Kugel)\n",
+    "    trail = hv.Curve((x_anim[:i+1], y_anim[:i+1])).opts(color='gray', alpha=0.5)  # Pfad der Masse\n",
+    "    return (trail * line * mass).opts(\n",
+    "        xlim=(-1.2, 1.2),      # feste x-Achse\n",
+    "        ylim=(-1.2, 0.2),      # feste y-Achse\n",
+    "        aspect='equal',        # Verhältnis x:y = 1:1\n",
+    "        framewise=True         # Zoom nicht automatisch anpassen\n",
+    "    )\n",
     "\n",
-    "# Setze die Dimension \"Frame\" mit einem expliziten Bereich (bounds)\n",
-    "dmap = dmap.redim.range(Frame=(0, len(x_anim)-1))\n",
+    "# --- GIF erzeugen ---\n",
+    "gif_filename = 'pendel_animation.gif'        # Name der Ausgabedatei\n",
+    "renderer = hv.renderer('matplotlib')         # Holoviews mit Matplotlib als Renderer\n",
     "\n",
-    "# --- Importiere opts und Animation anzeigen ---\n",
-    "from holoviews import opts\n",
+    "with imageio.get_writer(gif_filename, mode='I', duration=dt) as writer:\n",
+    "    for i in range(0, len(t), 2):  # Nur jedes zweite Bild (um GIF kleiner zu halten)\n",
+    "        fig = renderer.get_plot(pendel_frame(i)).state   # Erzeuge Matplotlib-Figur\n",
+    "        fig.canvas.draw()\n",
+    "        img = np.array(fig.canvas.renderer.buffer_rgba())  # Konvertiere zu Bild-Array\n",
+    "        writer.append_data(img)                            # Füge Frame zum GIF hinzu\n",
+    "        plt.close(fig)                                     # Vermeidet Speicherüberlauf\n",
     "\n",
-    "dmap.opts(\n",
-    "    opts.Path(line_width=2, color='red', tools=['hover'], show_grid=True, title='Pendulum Animation', height=400, width=600)\n",
-    ")\n"
+    "# --- Anzeige des gespeicherten GIFs im Notebook ---\n",
+    "display(Image(filename=gif_filename))"
    ]
   },
   {
