Einleitung zu den Lösungen hinzugefügt

--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1149,8 +1149,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vergleich der Performance für die Methoden\n",
+    "\n",
+    "In dieser Aufgabe wird die Performance der verschiedenen Integrationsmethoden der Funktion `scipy.integrate.solve_ivp` verglichen. Ziel ist es, die Berechnungszeit für die numerische Lösung einer Differentialgleichung zu messen, die das Verhalten eines gedämpften Pendels beschreibt. Hierbei werden drei verschiedene Methoden verwendet: **RK45**, **RK23** und **DOP853**. Jede dieser Methoden hat unterschiedliche Eigenschaften in Bezug auf Genauigkeit und Effizienz.\n",
+    "\n",
+    "Die Vorgehensweise umfasst die folgenden Schritte:\n",
+    "\n",
+    "1. **Pendelparameter**: Für das Pendel sind physikalische Parameter wie Pendellänge (L), Masse (m), Dämpfung (b) und die Erdbeschleunigung (g) definiert. Der Anfangswinkel und die Anfangsgeschwindigkeit des Pendels sind ebenfalls festgelegt.\n",
+    "\n",
+    "2. **Differentialgleichung**: Das Pendel wird durch ein System von zwei Differentialgleichungen beschrieben: die Winkelgeschwindigkeit und die Änderung der Winkelgeschwindigkeit in Bezug auf die Zeit. Diese Gleichungen werden in einer Funktion `pendel` zusammengefasst.\n",
+    "\n",
+    "3. **Lösungsberechnung**: Um die Lösung der Differentialgleichung zu berechnen, wird die Funktion `solve_ivp` aus der SciPy-Bibliothek verwendet. Diese Funktion ermöglicht es, verschiedene Methoden zur numerischen Lösung der Differentialgleichungen auszuwählen. In dieser Aufgabe werden die Methoden **RK45**, **RK23** und **DOP853** verglichen.\n",
+    "\n",
+    "4. **Performance-Vergleich**: Mithilfe des `timeit`-Moduls wird die Berechnungszeit für jede der drei Methoden gemessen, indem die Simulation 100-mal wiederholt wird. Dies ermöglicht einen Vergleich der Effizienz und Geschwindigkeit der Methoden bei der Lösung des Pendelproblems.\n",
+    "\n",
+    "5. **Auswertung der Ergebnisse**: Am Ende wird die gemessene Zeit für jede Methode ausgegeben, um zu beurteilen, welche Methode bei der Lösung dieses spezifischen Problems am effizientesten ist.\n",
+    "\n",
+    "Der Fokus dieser Aufgabe liegt auf der Analyse der Performance der verschiedenen Methoden und ihrer Eignung für die Lösung von Differentialgleichungen, die in vielen Bereichen der Physik und Ingenieurwissenschaften auftreten."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -1248,6 +1271,29 @@
     "- Verwenden Sie Liniendiagramme.\n",
     "\n",
     "_Points:_ 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## x- und y-Position des Pendels über die Zeit in einem Diagramm\n",
+    "\n",
+    "In dieser Aufgabe wird die Bewegung eines Pendels mit einer gedämpften Schwingung simuliert, wobei die Lösung der Bewegung mit der Runge-Kutta-Methode 45 (RK45) berechnet wird. Das Ziel ist es, die Position des Pendels in der x- und y-Richtung sowie den Winkel des Pendels über die Zeit hinweg zu visualisieren. \n",
+    "\n",
+    "Der Prozess der Lösung umfasst die folgenden Schritte:\n",
+    "\n",
+    "1. **Pendelparameter**: Die physikalischen Eigenschaften des Pendels wie Länge (L), Masse (m), Dämpfungsfaktor (b), und die Erdbeschleunigung (g) werden festgelegt. Der Anfangswinkel (θ0) und die Anfangsgeschwindigkeit (ω0) sind ebenfalls vorgegeben.\n",
+    "\n",
+    "2. **Differentialgleichung**: Die Bewegung des Pendels wird durch eine linearisierte Differentialgleichung beschrieben, die sowohl die Winkelgeschwindigkeit als auch die Dämpfung berücksichtigt.\n",
+    "\n",
+    "3. **Numerische Lösung**: Die Bewegung des Pendels wird mit der RK45-Methode numerisch integriert. Diese Methode ist bekannt für ihre hohe Genauigkeit und wird hier verwendet, um die Position und den Winkel des Pendels über die Zeit zu berechnen.\n",
+    "\n",
+    "4. **Visualisierung**:\n",
+    "   - **x- und y-Positionen**: Die Position des Pendels in der horizontalen (x) und vertikalen (y) Richtung wird in zwei separaten Diagrammen dargestellt.\n",
+    "   - **Winkel**: Der Winkel des Pendels wird über die Zeit in einem dritten Diagramm angezeigt.\n",
+    "\n",
+    "Ziel dieser Aufgabe ist es, die zeitliche Entwicklung der Pendelbewegung zu verstehen und zu visualisieren. Die erhaltenen Diagramme bieten Einblicke in die Schwingungsdynamik des Pendels und zeigen die Auswirkungen der Dämpfung auf seine Bewegung.\n"
    ]
   },
   {
@@ -1386,6 +1432,33 @@
     "- Absoluter Unterschied von y zwischen beiden Methoden über der Zeit\n",
     "\n",
     "_Points:_ 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unterschiede zwischen der 'RK45' Methode under der 'RK23' Methode\n",
+    "\n",
+    "Dieses Python-Skript simuliert das Verhalten eines gedämpften Pendels und vergleicht die Ergebnisse zweier numerischer Integrationsmethoden, um die Bewegung des Pendels über die Zeit zu berechnen und darzustellen. Das Pendel wird durch eine Differentialgleichung modelliert, die sowohl die Rückstellkraft als auch die Dämpfung berücksichtigt.\n",
+    "\n",
+    "Im Code werden die folgenden Schritte durchgeführt:\n",
+    "\n",
+    "1. **Pendelsystem-Parameter**: Die physikalischen Parameter des Pendels, wie Pendellänge, Masse, Dämpfung und Erdbeschleunigung, werden festgelegt. Der Anfangswinkel und die Anfangsgeschwindigkeit werden ebenfalls definiert.\n",
+    "\n",
+    "2. **Differentialgleichung des gedämpften Pendels**: Die Bewegung des Pendels wird durch eine gekoppelte Differentialgleichung erster Ordnung beschrieben, die sowohl den Winkel des Pendels (θ) als auch die Winkelgeschwindigkeit (ω) umfasst. Die Rückstellkraft (durch die Schwere des Pendels) und die Dämpfung (durch die Luftreibung) wirken zusammen auf das System.\n",
+    "\n",
+    "3. **Numerische Lösung**: Die Differentialgleichung wird numerisch mit zwei verschiedenen Runge-Kutta-Verfahren (RK45 und RK23) gelöst:\n",
+    "   - **RK45**: Eine höhere Ordnung (5. Ordnung) Methode, die die Dormand-Prince-Methode verwendet.\n",
+    "   - **RK23**: Eine geringere Ordnung (3. Ordnung) Methode, die die Bogacki-Shampine-Methode verwendet.\n",
+    "   \n",
+    "4. **Vergleich der Lösungen**: Die Berechnungen der beiden Methoden werden miteinander verglichen, indem der absolute Unterschied in den berechneten Positionen des Pendels (sowohl in der x- als auch in der y-Richtung) über die Zeit dargestellt wird.\n",
+    "\n",
+    "5. **Visualisierung der Ergebnisse**: Die Ergebnisse werden in vier verschiedenen Diagrammen angezeigt:\n",
+    "   - Die Position des Pendels in der x-Richtung und y-Richtung über die Zeit.\n",
+    "   - Der absolute Unterschied in den x- und y-Positionen zwischen den beiden Methoden (RK45 und RK23).\n",
+    "\n",
+    "Das Ziel des Skripts ist es, die Auswirkungen unterschiedlicher Integrationsmethoden auf die Genauigkeit der Simulation und den Vergleich der Position des Pendels im Verlauf der Zeit zu analysieren. Es zeigt, wie die Wahl der numerischen Methode die Präzision in der Berechnung der Pendelbewegung beeinflussen kann.\n"
    ]
   },
   {
@@ -1555,6 +1628,33 @@
     "- Tipp für \"hvplot\": aus `import holoviews as hv` ist [hv.Path() hilfreich](https://holoviews.org/reference/elements/bokeh/Path.html)\n",
     "\n",
     "_Points:_ 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Animation des Pendels\n",
+    "\n",
+    "In diesem Python-Skript wird die Bewegung eines Pendels simuliert und eine animierte Darstellung der Pendelbewegung erstellt. Die Simulation basiert auf den Grundgleichungen der klassischen Mechanik, speziell auf der Differentialgleichung des Pendels, die die zeitliche Entwicklung des Winkels und der Winkelgeschwindigkeit beschreibt. Anstatt eine analytische Lösung zu suchen, wird die numerische Integration der Bewegung mit der Methode des Runge-Kutta-Integrators (RK23) durchgeführt.\n",
+    "\n",
+    "Im Verlauf des Codes werden die folgenden Schritte durchgeführt:\n",
+    "\n",
+    "1. **Bibliotheken laden**: Notwendige Bibliotheken wie `numpy`, `pandas`, `matplotlib`, `holoviews`, `imageio` und `scipy` werden importiert. Diese sind erforderlich für numerische Berechnungen, Datenstrukturierung, Plotting, Animation und die Lösung der Differentialgleichung.\n",
+    "\n",
+    "2. **Physikalische Parameter**: Die Anfangsbedingungen und physikalischen Konstanten des Pendels (Erdbeschleunigung, Länge des Pendels, Anfangswinkel und -geschwindigkeit) werden festgelegt.\n",
+    "\n",
+    "3. **Differentialgleichung**: Die Gleichung für das Pendel wird in der Funktion `pendel_ode` definiert, die die Ableitungen des Winkels und der Winkelgeschwindigkeit berechnet.\n",
+    "\n",
+    "4. **Numerische Lösung**: Die Differentialgleichung wird mit `scipy.integrate.solve_ivp` und der Runge-Kutta-Methode RK23 über ein definiertes Zeitintervall numerisch gelöst.\n",
+    "\n",
+    "5. **Datenextraktion und Vorbereitung**: Die Ergebnisse der Simulation (Winkel, Winkelgeschwindigkeit und Positionen) werden extrahiert und in einem Pandas DataFrame gespeichert. Dies ermöglicht eine einfache Weiterverarbeitung und Visualisierung.\n",
+    "\n",
+    "6. **Visualisierung**: Mit `holoviews` wird die Pendelbewegung als interaktive Animation dargestellt. Es wird ein GIF erstellt, das die Bewegung des Pendels in jedem Zeitschritt zeigt.\n",
+    "\n",
+    "7. **GIF-Erstellung**: Das GIF wird mit der Bibliothek `imageio` aus den einzelnen Frames der Animation erstellt und im Jupyter-Notebook angezeigt.\n",
+    "\n",
+    "Dieses Skript bietet eine anschauliche Möglichkeit, die Dynamik eines Pendels zu simulieren und interaktive, animierte Visualisierungen zu erzeugen. Die numerische Lösung der Bewegung ermöglicht eine realistische Darstellung auch für größere Auslenkungen des Pendels, bei denen die Näherung für kleine Winkel nicht mehr gültig ist.\n"
    ]
   },
   {
