--- a/EA3.ipynb
+++ b/EA3.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -425,12 +425,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scalene: could not find input file /workspaces/SC_EA1_bis_EA3/mandelbrot_versions.py\n"
+      "Scalene: could not find input file /workspaces/SC_EA1_bis_EA3/mandelbrot_versionen.py\n"
      ]
     }
    ],
    "source": [
-    "!scalene mandelbrot_versions.py --cpu-sampling-rate 0.0001"
+    "!scalene mandelbrot_versionen.py --cpu-sampling-rate 0.0001"
    ]
   },
   {
