--- a/EA3/EA3.ipynb
+++ b/EA3/EA3.ipynb
@@ -425,11 +425,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scalene: could not find input file /workspaces/SC_EA1_bis_EA3/AhmedHossamMido/SC_EA1_bis_EA3/mandelbrot_versionen.py\n"
+      "\u001b[0m"
      ]
     }
    ],
    "source": [
+    "with open(\"mandelbrot_versionen.py\", \"w\") as f:\n",
+    "    f.write(\"\"\"\n",
+    "import numba\n",
+    "import numpy as np\n",
+    "\n",
+    "def escape_time(p, maxiter):\n",
+    "    z = 0j\n",
+    "    for i in range(maxiter):\n",
+    "        z = z*z + p\n",
+    "        if abs(z) > 2:\n",
+    "            return i\n",
+    "    return maxiter\n",
+    "\n",
+    "def mandelbrot_set_np_vectorized(P, maxiter):\n",
+    "    vectorized_escape_time = np.vectorize(escape_time)\n",
+    "    return vectorized_escape_time(P, maxiter)\n",
+    "\n",
+    "@numba.vectorize(['int32(complex128, int32)'])\n",
+    "def escape_time_numba(p, maxiter):\n",
+    "    z = 0j\n",
+    "    for i in range(maxiter):\n",
+    "        z = z*z + p\n",
+    "        if abs(z) > 2:\n",
+    "            return i\n",
+    "    return maxiter\n",
+    "\n",
+    "def mandelbrot_set_numba_vectorized(P, maxiter):\n",
+    "    return escape_time_numba(P, maxiter)\n",
+    "\n",
+    "@numba.vectorize(['int32(complex128, int32)'], target='parallel')\n",
+    "def escape_time_numba_par(p, maxiter):\n",
+    "    z = 0j\n",
+    "    for i in range(maxiter):\n",
+    "        z = z*z + p\n",
+    "        if abs(z) > 2:\n",
+    "            return i\n",
+    "    return maxiter\n",
+    "\n",
+    "def mandelbrot_set_numba_vectorized_par(P, maxiter):\n",
+    "    return escape_time_numba_par(P, maxiter)\n",
+    "\n",
+    "# Gitter erstellen (kleiner für Profiling-Zwecke)\n",
+    "real_param = (-1.5, 1.1, 300)\n",
+    "imag_param = (-1.5j, 1.1j, 300)\n",
+    "XX, YY = np.meshgrid(np.linspace(*real_param), np.linspace(*imag_param))\n",
+    "P = XX + YY\n",
+    "maxiter = 200\n",
+    "\n",
+    "# alle drei Varianten EINMAL aufrufen\n",
+    "mandelbrot_set_np_vectorized(P, maxiter)\n",
+    "mandelbrot_set_numba_vectorized(P, maxiter)\n",
+    "mandelbrot_set_numba_vectorized_par(P, maxiter)\n",
+    "\"\"\")\n",
+    "\n",
     "!scalene mandelbrot_versionen.py --cpu-sampling-rate 0.0001"
    ]
   },
