Änderungen wegen Scalene

--- a/EA3/EA3.ipynb
+++ b/EA3/EA3.ipynb
@@ -430,7 +430,7 @@
     }
    ],
    "source": [
-    "with open(\"mandelbrot_versionen.py\", \"w\") as f:\n",
+    "with open(\"/workspaces/SC_EA1_bis_EA3/mandelbrot_versionen.py\", \"w\") as f:\n",
     "    f.write(\"\"\"\n",
     "import numba\n",
     "import numpy as np\n",
@@ -484,7 +484,7 @@
     "mandelbrot_set_numba_vectorized_par(P, maxiter)\n",
     "\"\"\")\n",
     "\n",
-    "!scalene mandelbrot_versionen.py --cpu-sampling-rate 0.0001"
+    "!scalene mandelbrot_versionen.py --cpu-sampling-rate 0.0001\n"
    ]
   },
   {
